# src/main/resources/swagger/api.yml
@@ -9,7 +9,56 @@ servers:
     description: Development server
   - url: https://localhost:8080/api
     description: Development server with TLS Profile
-paths: {}
+paths:
+  /frontend/profil:
+    get:
+      tags:
+        - frontend
+      description: erhalte Informationen über das Profil
+      operationId: getProfil
+      security:
+        - jwt: []
+      responses:
+        '200':
+          description: Antwort auf getProfil
+          content:
+            application/json:
+              schema:
+                $ref: 'schemas/profil.yml'
+        default:
+          description: unexpected error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+  /frontend/aufgabe:
+    get:
+      tags:
+        - frontend
+      description: Bekomme eine Aufgabe für die entsprechende Id
+      operationId: getAufgabeById
+      parameters:
+        - in: query
+          name: aufgabeId
+          description: AufgabenId der Aufgabe, die geholt werden soll
+          schema:
+            type: integer
+      security:
+        - jwt: [ ]
+      responses:
+        '200':
+          description: Antwort auf getAufgabeById
+          content:
+            application/json:
+              schema:
+                $ref: 'schemas/aufgabe.yml'
+        default:
+          description: unexpected error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+
 components:
   responses:
     Problem:
@@ -18,6 +67,18 @@ components:
         'application/problem+json':
           schema:
             $ref: 'https://opensource.zalando.com/problem/schema.yaml#/Problem'
+  schemas:
+    Error:
+      type: object
+      required:
+        - code
+        - message
+      properties:
+        code:
+          type: integer
+          format: int32
+        message:
+          type: string
 
   securitySchemes:
     jwt:
